[gd_scene load_steps=6 format=3 uid="uid://bcndf67nxwnom"]

[ext_resource type="Texture2D" uid="uid://b0xdqwrt4oyhh" path="res://CardAssets/card_handreroll.png" id="1_bcwp0"]
[ext_resource type="Script" path="res://Scene/AbilityCard.gd" id="1_mbr6n"]
[ext_resource type="Texture2D" uid="uid://dx6te1nrf1w4i" path="res://CardAssets/card_handreroll-export.png" id="2_1rbd7"]
[ext_resource type="AudioStream" uid="uid://d01bmokps3xxd" path="res://Audio/CardSelected (2).mp3" id="3_l1x4d"]
[ext_resource type="AudioStream" uid="uid://btkcud1bccupb" path="res://Audio/CardUnselected.mp3" id="4_xgqj4"]

[node name="Handreroll" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_bcwp0")
script = ExtResource("1_mbr6n")

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.301961)
position = Vector2(4.92857, 237.325)
scale = Vector2(0.964286, 0.0541667)
texture = ExtResource("2_1rbd7")
offset = Vector2(82, 114)

[node name="CardSelected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_l1x4d")
volume_db = 0.839

[node name="CardUnselected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xgqj4")
volume_db = 0.839

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_hand_roll_pressed"]
