[gd_scene load_steps=5 format=3 uid="uid://jjtjf67p6cw0"]

[ext_resource type="Script" path="res://Scene/AbilityCard.gd" id="1_582bv"]
[ext_resource type="Texture2D" uid="uid://tgyrw7igkj0l" path="res://CardAssets/card_LifeLine.png" id="2_cld66"]
[ext_resource type="AudioStream" uid="uid://d01bmokps3xxd" path="res://Audio/CardSelected (2).mp3" id="3_pmbha"]
[ext_resource type="AudioStream" uid="uid://btkcud1bccupb" path="res://Audio/CardUnselected.mp3" id="4_l4xyu"]

[node name="Lifeline" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2_cld66")
script = ExtResource("1_582bv")

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.301961)
position = Vector2(3.94051, 238.3)
scale = Vector2(0.970238, 0.05)
texture = ExtResource("2_cld66")
offset = Vector2(82, 114)

[node name="CardSelected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pmbha")
volume_db = 0.839

[node name="CardUnselected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_l4xyu")
volume_db = 0.839

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_life_line_pressed"]
